--- a/source/assets/css/modules/rule.css
+++ b/source/assets/css/modules/rule.css
@@ -1,12 +1,15 @@
 :root {
   --hrBgColor: #bdbdbd;
+  --hrHeight: 1px;
+  --hrMarginBottom: 1.5rem;
+  --hrMarginTop: 0;
 }
 
 hr {
   background-color: var(--hrBgColor);
   border: 0;
   box-sizing: content-box;
-  height: 1px;
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  height: var(--hrHeight);
+  margin-bottom: var(--hrMarginBottom);
+  margin-top: var(--hrMarginTop);
 }
