--- a/source/assets/css/modules/breadcrumb.css
+++ b/source/assets/css/modules/breadcrumb.css
@@ -1,6 +1,13 @@
+:root {
+  --breadcrumbItemMargin: .5rem;
+
+  --breadcrumbLinkPaddingHorizontal: .5rem;
+  --breadcrumbLinkPaddingVertical: .25rem;
+}
+
 .breadcrumb {
   list-style: none;
-  margin: -.5rem;
+  margin: calc(var(--breadcrumbItemMargin) * -1);
   padding: 0;
 }
 
@@ -11,10 +18,10 @@
 
 .breadcrumb li {
   float: left;
-  margin: .5rem;
+  margin: var(--breadcrumbItemMargin);
 }
 
 .breadcrumb a {
   display: block;
-  padding: .25rem .5rem;
+  padding: var(--breadcrumbLinkPaddingVertical) var(--breadcrumbLinkPaddingHorizontal);
 }
