--- a/source/assets/css/modules/code.css
+++ b/source/assets/css/modules/code.css
@@ -1,20 +1,25 @@
 :root {
-  --codeBgColor: #f5f5f5;
   --codeFontFamily: 'Courier New';
   --codeFontFamilyFallback: monospace;
+  --codeFontSize: .75em;
+
+  --preBgColor: #f5f5f5;
+  --preMarginBottom: 1.5rem;
+  --preMarginTop: 0;
+  --prePadding: 1rem;
 }
 
 code {
   font-family: var(--codeFontFamily), var(--codeFontFamilyFallback);
-  font-size: .75em;
+  font-size: var(--codeFontSize);
 }
 
 pre {
-  background-color: var(--codeBgColor);
+  background-color: var(--preBgColor);
   display: block;
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  margin-bottom: var(--preMarginBottom);
+  margin-top: var(--preMarginTop);
   overflow: auto;
-  padding: 1rem;
+  padding: var(--prePadding);
   word-break: break-all;
 }
