--- a/source/assets/css/modules/details.css
+++ b/source/assets/css/modules/details.css
@@ -1,7 +1,12 @@
+:root {
+  --detailsMarginBottom: 1.5rem;
+  --detailsMarginTop: 0;
+}
+
 details {
   display: block;
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  margin-bottom: var(--detailsMarginBottom);
+  margin-top: var(--detailsMarginTop);
 }
 
 summary {
