--- a/source/assets/css/modules/grid.css
+++ b/source/assets/css/modules/grid.css
@@ -1,14 +1,15 @@
 :root {
   --gridColumns: 12;
-  --gridContainer: 78rem;
   --gridGutter: 2%;
+  --gridMaxWidth: 78rem;
+  --gridWidth: 90%;
 }
 
 .grid {
   margin-left: auto;
   margin-right: auto;
-  max-width: var(--gridContainer);
-  width: 90%;
+  max-width: var(----gridMaxWidth);
+  width: var(----gridWidth);
 }
 
 .grid::after {
