--- a/source/assets/css/modules/images.css
+++ b/source/assets/css/modules/images.css
@@ -1,3 +1,10 @@
+:root {
+  --figureMarginBottom: 1.5rem;
+  --figureMarginLeft: 0;
+  --figureMarginRight: 0;
+  --figureMarginTop: 0;
+}
+
 img,
 svg {
   border: 0;
@@ -12,10 +19,10 @@ svg:not(:root) {
 
 figure {
   display: block;
-  margin-bottom: 1.5rem;
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
+  margin-bottom: var(--figureMarginBottom);
+  margin-left: var(--figureMarginLeft);
+  margin-right: var(--figureMarginRight);
+  margin-top: var(--figureMarginTop);
 }
 
 figcaption {
