--- a/source/assets/css/modules/pagination.css
+++ b/source/assets/css/modules/pagination.css
@@ -1,3 +1,8 @@
+:root {
+  --paginationLinkPaddingHorizontal: .5rem;
+  --paginationLinkPaddingVertical: .25rem;
+}
+
 .pagination {
   list-style: none;
   margin: 0;
@@ -17,7 +22,7 @@
 
 .pagination a {
   display: block;
-  padding: .25rem .5rem;
+  padding: var(--paginationLinkPaddingVertical) var(--paginationLinkPaddingHorizontal);
 }
 
 .pagination__previous {
