--- a/source/assets/css/modules/posts.css
+++ b/source/assets/css/modules/posts.css
@@ -1,15 +1,19 @@
+:root {
+  --postsMarginBottom: 1.5rem;
+}
+
 article {
   display: block;
 }
 
 .posts {
   list-style: none;
-  margin-bottom: 1.5rem;
+  margin-bottom: var(--postsMarginBottom);
   padding: 0;
 }
 
 .post {
-  margin-bottom: 1.5rem;
+
 }
 
 .post__title {
