--- a/source/assets/css/modules/tags.css
+++ b/source/assets/css/modules/tags.css
@@ -1,9 +1,19 @@
+:root {
+  --tagsFontSize: .875rem;
+  --tagsMarginBottom: 1.25rem;
+
+  --tagMargin: .25rem;
+
+  --tagLinkPaddingHorizontal: .5rem;
+  --tagLinkPaddingVertical: .25rem;
+}
+
 .tags {
-  font-size: .875rem;
+  font-size: var(--tagsFontSize);
   list-style: none;
-  margin-bottom: 1.25rem;
-  margin-left: -.25rem;
-  margin-right: -.25rem;
+  margin-bottom: var(--tagsMarginBottom);
+  margin-left: calc(var(--tagMargin) * -1);
+  margin-right: calc(var(--tagMargin) * -1);
   padding: 0;
 }
 
@@ -15,10 +25,10 @@
 
 .tag {
   float: left;
-  margin: .25rem;
+  margin: var(--tagMargin);
 }
 
 .tag a {
   border: 1px solid var(--borderColor);
-  padding: .25rem .5rem;
+  padding: var(--tagLinkPaddingVertical) var(--tagLinkPaddingHorizontal);
 }
