--- a/source/assets/css/modules/grid.css
+++ b/source/assets/css/modules/grid.css
@@ -8,8 +8,8 @@
 .grid {
   margin-left: auto;
   margin-right: auto;
-  max-width: var(----gridMaxWidth);
-  width: var(----gridWidth);
+  max-width: var(--gridMaxWidth);
+  width: var(--gridWidth);
 }
 
 .grid::after {
