--- a/source/assets/css/modules/text.css
+++ b/source/assets/css/modules/text.css
@@ -10,7 +10,7 @@ em {
 
 b,
 strong {
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 p {
@@ -19,23 +19,23 @@ p {
 }
 
 small {
-  font-size: .75rem;
+  font-size: 80%;
 }
 
 sub,
 sup {
-  font-size: .75rem;
+  font-size: 75%;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
 }
 
-sup {
-  top: -.5rem;
+sub {
+  bottom: -.25em;
 }
 
-sub {
-  bottom: -.25rem;
+sup {
+  top: -.5em;
 }
 
 .text--lower {
