lazy load content images

--- a/source/templates/layouts/default.html
+++ b/source/templates/layouts/default.html
@@ -21,6 +21,7 @@
 
   {{> google-analytics}}
   <!-- build:js assets/js/script.js -->
+  <script src="bower_components/lazysizes/lazysizes.js"></script>
   <script src="assets/js/script.js"></script>
   <!-- endbuild -->
 
