--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -110,18 +110,18 @@ add(a, b);</code></pre>
 
           <p>
             <picture>
-              <source media="(min-width: 960px)" srcset="http://dummyimage.com/1248x936/808080/fff.png">
-              <source media="(min-width: 640px)" srcset="http://dummyimage.com/960x720/808080/fff.png">
-              <source media="(min-width: 480px)" srcset="http://dummyimage.com/640x480/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="">
+              <source media="(min-width: 960px)" data-srcset="http://dummyimage.com/1248x936/808080/fff.png">
+              <source media="(min-width: 640px)" data-srcset="http://dummyimage.com/960x720/808080/fff.png">
+              <source media="(min-width: 480px)" data-srcset="http://dummyimage.com/640x480/808080/fff.png">
+              <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="" class="lazyload">
             </picture>
           </p>
 
           <pre><code>&lt;picture&gt;
-  &lt;source media="(min-width: 960px)" srcset="http://dummyimage.com/1248x936/808080/fff.png"&gt;
-  &lt;source media="(min-width: 640px)" srcset="http://dummyimage.com/960x720/808080/fff.png"&gt;
-  &lt;source media="(min-width: 480px)" srcset="http://dummyimage.com/640x480/808080/fff.png"&gt;
-  &lt;img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt=""&gt;
+  &lt;source media="(min-width: 960px)" data-srcset="http://dummyimage.com/1248x936/808080/fff.png"&gt;
+  &lt;source media="(min-width: 640px)" data-srcset="http://dummyimage.com/960x720/808080/fff.png"&gt;
+  &lt;source media="(min-width: 480px)" data-srcset="http://dummyimage.com/640x480/808080/fff.png"&gt;
+  &lt;img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="" class="lazyload"&gt;
 &lt;/picture&gt;</code></pre>
 
         </section>
@@ -135,7 +135,11 @@ add(a, b);</code></pre>
           <div class="media">
 
             <figure class="media__obj media__obj--left">
-              <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
+              <a href="#">
+                <picture>
+                  <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
+                </picture>
+              </a>
             </figure>
 
             <div class="media__body">
@@ -156,7 +160,11 @@ add(a, b);</code></pre>
           <div class="media">
 
             <figure class="media__obj media__obj--right">
-              <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
+              <a href="#">
+                <picture>
+                  <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
+                </picture>
+              </a>
             </figure>
 
             <div class="media__body">
@@ -177,7 +185,11 @@ add(a, b);</code></pre>
           <div class="media media--center">
 
             <figure class="media__obj media__obj--left">
-              <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
+              <a href="#">
+                <picture>
+                  <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
+                </picture>
+              </a>
             </figure>
 
             <div class="media__body">
@@ -198,7 +210,11 @@ add(a, b);</code></pre>
           <div class="media">
 
             <figure class="media__obj media__obj--left">
-              <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
+              <a href="#">
+                <picture>
+                  <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
+                </picture>
+              </a>
             </figure>
 
             <div class="media__body">
@@ -208,7 +224,11 @@ add(a, b);</code></pre>
               <div class="media">
 
                 <figure class="media__obj media__obj--left">
-                  <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
+                  <a href="#">
+                    <picture>
+                      <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" class="lazyload">
+                    </picture>
+                  </a>
                 </figure>
 
                 <div class="media__body">
@@ -366,7 +386,9 @@ add(a, b);</code></pre>
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                   <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
-                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
                   </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
@@ -375,7 +397,9 @@ add(a, b);</code></pre>
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                   <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
-                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
                   </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
@@ -384,7 +408,9 @@ add(a, b);</code></pre>
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                   <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
-                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
                   </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
@@ -393,7 +419,9 @@ add(a, b);</code></pre>
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                   <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
-                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
                   </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
@@ -402,7 +430,9 @@ add(a, b);</code></pre>
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                   <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
-                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
                   </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
@@ -411,7 +441,9 @@ add(a, b);</code></pre>
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                   <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
-                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
                   </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
@@ -420,7 +452,9 @@ add(a, b);</code></pre>
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                   <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
-                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
                   </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
@@ -429,7 +463,9 @@ add(a, b);</code></pre>
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                   <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
-                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
                   </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
@@ -438,7 +474,9 @@ add(a, b);</code></pre>
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                   <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
-                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
                   </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
@@ -447,7 +485,9 @@ add(a, b);</code></pre>
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                   <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
-                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
                   </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
@@ -455,14 +495,22 @@ add(a, b);</code></pre>
 
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail"></a>
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
+                  </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
 
               <li>
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text" itemprop="thumbnail"></a>
+                  <a href="http://dummyimage.com/460x345/808080/fff.png" title="" itemprop="contentUrl">
+                    <picture>
+                      <img data-src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345" alt="Alt Text" itemprop="thumbnail" class="lazyload">
+                    </picture>
+                  </a>
                   <figcaption itemprop="caption description">Figcaption</figcaption>
                 </figure>
               </li>
@@ -477,7 +525,9 @@ add(a, b);</code></pre>
     &lt;li&gt;
       &lt;figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"&gt;
         &lt;a href="#" title=" itemprop="contentUrl"&gt;
-          &lt;img src=" width="" height="" alt=" itemprop="thumbnail"&gt;
+          &lt;picture&gt;
+            &lt;img data-src=" width="" height="" alt=" itemprop="thumbnail" class="lazyload"&gt;
+          &lt;/picture&gt;
         &lt;/a&gt;
         &lt;figcaption itemprop="caption description"&gt;…&lt;/figcaption&gt;
       &lt;/figure&gt;
@@ -1155,7 +1205,7 @@ add(a, b);</code></pre>
                 <figure class="post__thumbnail media__obj--left">
                   <a href="posts/post-title" itemprop="url">
                     <picture>
-                      <img src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image">
+                      <img data-src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image" class="lazyload">
                     </picture>
                   </a>
                 </figure>
@@ -1186,7 +1236,7 @@ add(a, b);</code></pre>
                 <figure class="post__thumbnail media__obj--left">
                   <a href="posts/post-title" itemprop="url">
                     <picture>
-                      <img src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image">
+                      <img data-src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image" class="lazyload">
                     </picture>
                   </a>
                 </figure>
@@ -1217,7 +1267,7 @@ add(a, b);</code></pre>
                 <figure class="post__thumbnail media__obj--left">
                   <a href="posts/post-title" itemprop="url">
                     <picture>
-                      <img src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image">
+                      <img data-src="http://dummyimage.com/300x200/808080/fff.png" width="300" height="200" alt="" itemprop="image" class="lazyload">
                     </picture>
                   </a>
                 </figure>
@@ -1253,7 +1303,7 @@ add(a, b);</code></pre>
 
               <figure>
                 <picture>
-                  <img src="http://dummyimage.com/930x443/808080/fff.png" width="930" height="443" alt="">
+                  <img data-src="http://dummyimage.com/930x443/808080/fff.png" width="930" height="443" alt="" class="lazyload">
                 </picture>
               </figure>
 
@@ -1275,7 +1325,9 @@ add(a, b);</code></pre>
 
                 <div class="media__obj--left">
                   <a href="users/author" itemprop="url">
-                    <img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="">
+                    <picture>
+                      <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="" class="lazyload">
+                    </picture>
                   </a>
                 </div>
 
@@ -1294,7 +1346,9 @@ add(a, b);</code></pre>
 
                 <div class="media__obj--left">
                   <a href="users/author" itemprop="url">
-                    <img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="">
+                    <picture>
+                      <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="" class="lazyload">
+                    </picture>
                   </a>
                 </div>
 
@@ -1313,7 +1367,9 @@ add(a, b);</code></pre>
 
                 <div class="media__obj--left">
                   <a href="users/author" itemprop="url">
-                    <img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="">
+                    <picture>
+                      <img data-src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48" alt="" class="lazyload">
+                    </picture>
                   </a>
                 </div>
 
