--- a/source/templates/layouts/main-left-right.html
+++ b/source/templates/layouts/main-left-right.html
@@ -27,11 +27,7 @@
 
   {{> footer}}
 
-  {{> google-analytics}}
-  <!-- build:js assets/js/script.js -->
-  <script src="bower_components/lazysizes/lazysizes.js"></script>
-  <script src="assets/js/script.js"></script>
-  <!-- endbuild -->
+  {{> script}}
 
 </body>
 </html>
