move "figure" and "figcaption" into their own files

--- a/source/assets/css/style.css
+++ b/source/assets/css/style.css
@@ -13,6 +13,7 @@
 @import 'modules/details.css';
 @import 'modules/dialog.css';
 @import 'modules/embed.css';
+@import 'modules/figure.css';
 @import 'modules/forms.css';
 @import 'modules/gallery.css';
 @import 'modules/grid.css';
